--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ env/.local/share/nvim/.netrwhist
 env/.local/share/nvim/rplugin.vim
 env/.local/share/nvim/telescope_history
 env/.config/nvim/plugin
+env/.vim
+wallpapers
