--- a/bspwm/.config/polybar/config
+++ b/bspwm/.config/polybar/config
@@ -1,108 +1,177 @@
+;==========================================================
+;
+;
+;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
+;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
+;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
+;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
+;
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/polybar/polybar
+;
+;   The README contains a lot of information
+;
+;==========================================================
+
 [colors]
-background = #1d2021
-background-alt = #444
-foreground = #d79921
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
+background = #252a35
+;background-alt =
+foreground = #dfdfdf
+;foreground-alt =
+primary = #252a35
+secondary = #252a35
 alert = #bd2c40
 
 [bar/main]
+bottom = false
+fixed-center = true
+height = 32
 width = 100%
-height = 20
-;offset-x = 0.2%
-;offset-y = 0.4%
-fixed-center = yes
+padding = 2
 
-border-bottom-size  = 3
-border-bottom-color = #cc241d
+override-redirect = true
+wm-restack = bspwm
+
+tray-position = center
+tray-detach = true
+tray-background = ${colors.background}
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-padding-left = 2
-padding-right = 2
+line-size = 2
+line-color = #f00
 
-module-margin-left = 2
-module-margin-right = 2
+font-0 = FiraCode:pixelsize=10:style=Bold;2
+font-1 = MaterialDesignIcons:pixelsize=18:style=Bold;4
 
-font-0 = hack:pixelsize=10
-
-modules-left =
+modules-left = bspwm
 modules-center = date
-modules-right =
+modules-right = pulseaudio
 
-cursor-click = pointer
-cursor-scroll = ns-resize
+[global/wm]
+; Adjust the _NET_WM_STRUT_PARTIAL top value
+;   Used for top aligned bars
+margin-bottom = 0
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
+; Adjust the _NET_WM_STRUT_PARTIAL bottom value
+;   Used for bottom aligned bars
+margin-top = 0
 
-[module/filesystem]
-type = internal/fs
-interval = 25
+[module/bspwm]
+type = internal/bspwm
 
-mount-0 = /
+; Only show workspaces defined on the same output as the bar
+pin-workspaces = true
 
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+; Output mode flags after focused state label
+inline-mode = false
+
+; Create click handler used to focus workspace
+enable-click = yes
+
+; Create scroll handlers used to cycle workspaces
+enable-scroll = false
+
+; Set the scroll cycle direction 
+reverse-scroll = false
+
+;   <label-monitor>
+;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
+;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
+format = <label-state>   <label-mode>
+
+; If any values for label-dimmed-N are defined, the workspace/mode
+; colors will get overridden with those values if the monitor is out of focus
+; To only override workspaces in a specific state, use:
+;   label-dimmed-focused
+;   label-dimmed-occupied
+;   label-dimmed-urgent
+;   label-dimmed-empty
+
+ws-icon-default = 󰄰
+label-focused = 󱤧
+label-occupied = 󰐙
+label-urgent = 󰗖
+label-empty = 󱑚
+
+; The following labels will be used to indicate the layout/mode
+; for the focused workspace. Requires <label-mode>
+label-monocle = 󰰐
+label-tiled = 󰰥
+label-fullscreen = 󰪥
+label-floating = 󰬸
+label-pseudotiled = 󰰙
+label-locked = 󰌾
+label-sticky = 󰗐
+label-private = 󰀉
+label-marked = 󰄳
+
+label-separator = " "
 
 [module/date]
 type = internal/date
+
+interval = 5.0
+
+; See "https://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+date = %d.%m%
+
+; Optional time format
+time = %H:%M
+
+format = <label>
+
+; Available tokens:
+;   %date%
+;   %time%
+label = %date% %time%
+label-font = 0
+
+[module/pulseaudio]
+type = internal/pulseaudio
+
+sink = alsa_output.pci-0000_01_00.1.hdmi-stereo
+
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+use-ui-max = false
+
+; Interval for volume increase/decrease (in percent points)
 interval = 5
 
-date = " %Y-%m-%d"
-date-alt = " %Y-%m-%d"
+; Available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-volume = <ramp-volume> <label-volume>
 
-time = %H:%M
-time-alt = %H:%M:%S
+; Available tags:
+;   <label-muted> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-muted = <label-muted>
 
-format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-;format-underline = #0a6cf5
+; Available tokens:
+;   %percentage% (default)
+;   %decibels%
+label-volume = %percentage%%
 
-label = %date% %time%
+; Available tokens:
+;   %percentage% (default)
+;   %decibels%
+label-muted = 󰖁
 
-[module/alsa]
-type = internal/alsa
+; Only applies if <ramp-volume> is used
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
 
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL
-label-volume-foreground = ${root.foreground}
-
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
-
-[global/wm]
-margin-top = 5
-margin-bottom = 5
+; Right and Middle click
+; click-right = pavucontrol
+; click-middle = 
 
 ; vim:ft=dosini
