--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "repos/arc-openbox"]
 	path = repos/arc-openbox
 	url = https://github.com/dglava/arc-openbox
+[submodule "suckless/st/st"]
+	path = suckless/st/st
+	url = https://github.com/LuchianMihai/st
