--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ env/.local/share/nvim/site/pack/lm/start
 env/.local/share/nvim/site/pack/lm/start
 env/.local/share
 env/.local/share
+zsh/.config/zsh/.zcompdump
+nvim/.config/nvim/lazy-lock.json
