--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,3 +1,7 @@
+# Variables
+$mainMod = SUPER
+$term = foot
+
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=eDP-1,disable
 monitor = eDP-1,highrr,auto,1
@@ -100,16 +104,11 @@ gestures {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrulev2 = float,class:^(evince)$
-windowrulev2 = float,class:^(evince-previewer)$
-windowrulev2 = float,class:^(org.gnome.Nautilus)$
-windowrulev2 = float,class:^(file-roller)$
+windowrulev2 = float,class:^(nm-connection-editor)$
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, return, exec, alacritty
+bind = $mainMod, return, exec, foot
 bind = $mainMod, M, exit
 bind = $mainMod, V, togglefloating
 bind = $mainMod, R, exec, fuzzel
