--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -7,14 +7,18 @@ $term = foot
 monitor = eDP-1,highrr,auto,1
 monitor = HDMI-A-1,highres,auto,1
 
+env = XDG_CURRENT_DESKTOP,GNOME
+env = XDG_SESSION_DESKTOP,gnome
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --all
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = systemctl --user start hyprland-session.target
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
-
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -105,6 +109,9 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrulev2 = float,class:^(nm-connection-editor)$
+
+
+windowrulev2 = float,class:^(org.gnome.*)$
 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
