--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ env = XDG_SESSION_DESKTOP,gnome
 
 exec-once = dbus-update-activation-environment --all
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = /usr/lib/geoclue-2.0/demos/agent
 exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = systemctl --user start hyprland-session.target
 
