--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -7,15 +7,16 @@ $term = foot
 monitor = eDP-1,highrr,auto,1
 monitor = HDMI-A-1,highres,auto,1
 
-env = XDG_CURRENT_DESKTOP,GNOME
-env = XDG_SESSION_DESKTOP,gnome
+#env = XDG_CURRENT_DESKTOP,GNOME
+#env = XDG_SESSION_DESKTOP,gnome
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-exec-once = dbus-update-activation-environment --all
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = /usr/lib/geoclue-2.0/demos/agent
+
 exec-once = gnome-keyring-daemon --start --components=secrets
+exec-once = dbus-update-activation-environment --all
 exec-once = systemctl --user start hyprland-session.target
 
 # Source a file (multi-file configs)
