--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -47,21 +47,17 @@ general {
   col.inactive_border = rgba(665c54aa)
 
   layout = dwindle
+  # no_border_on_floating = true
 }
 
 decoration {
   rounding = 12
 
   blur {
-    enabled = true
-    size = 3
-    passes = 1
+    enabled = false
   }
 
-  drop_shadow = yes
-  shadow_range = 4
-  shadow_render_power = 3
-  col.shadow = rgba(1a1a1aee)
+  drop_shadow = false
 }
 
 misc {
@@ -70,7 +66,7 @@ misc {
   force_default_wallpaper = 0
 
   enable_swallow = true
-  swallow_regex = ^(Alacritty)$
+  swallow_regex = ^(Alacritty|foot)$
   # allow mutiple terminals to swallow
   # swallow_regex = ^(Alacritty|kitty|footclient)$ 
 }
@@ -94,11 +90,6 @@ dwindle {
   preserve_split = yes # you probably want this
 }
 
-master {
-  # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-  new_is_master = true
-}
-
 gestures {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
   workspace_swipe = on
@@ -111,9 +102,7 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrulev2 = float,class:^(nm-connection-editor)$
-
-
-windowrulev2 = float,class:^(org.gnome.*)$
+#windowrulev2 = float,class:^(org.gnome.*)$
 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
