--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -102,6 +102,7 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrulev2 = float,class:^(nm-connection-editor)$
+windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 #windowrulev2 = float,class:^(org.gnome.*)$
 
 
